# evonomics

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: brain.rs  grid.rs  gridgen.rs  main.rs  plot.rs  sim.rs  style.rs
src/grid/: evo.rs  mod.rs
src/sim/: brain.rs
