[package]
name = "evonomics"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "7565d294afd668cc95d85f15662d0704962c9614", features = ["canvas", "tokio", "debug"] }
tokio = { version = "0.2.20", features = ["blocking"] }
itertools = "0.9.0"
rustc-hash = "1.1.0"
gridsim = "0.3.2"
gridsim-ui = "0.4.1"
rand = "0.7.3"
rand_distr = "0.2.2"
arrayvec = "0.5.1"
noise = "0.6.0"
rayon = "1.3.0"
futures = "0.3.5"
ndarray = "0.13.1"
float-ord = "0.2.0"
palette = "0.5.0"
lazy_static = "1.4.0"
rand_chacha = "0.2.2"

[profile.release]
debug = true
