[package]
name = "evonomics"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>", "Gage Ervin <gage.william.ervin@gmail.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "33448508a524db6447b380cc236be6f0d5ca8a86", features = ["canvas", "tokio", "debug", "image"] }
tokio = { version = "0.2.21", features = ["blocking"] }
itertools = "0.9.0"
rustc-hash = "1.1.0"
gridsim = "0.3.2"
gridsim-ui = "0.4.1"
rand = "0.7.3"
rand_distr = "0.2.2"
arrayvec = "0.5.1"
rayon = "1.3.0"
futures = "0.3.5"
ndarray = "0.13.1"
float-ord = "0.2.0"
palette = "0.5.0"
lazy_static = "1.4.0"
rand_chacha = "0.2.2"
nalgebra = "0.21.0"
num-traits = "0.2.11"
slab = "0.4.2"
min-max-heap = "1.3.0"
plotters = "0.2.14"

[profile.release]
debug = true
